5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1630_2945.log
== TEST (2019-04-02 16:53:01) 
-- CODE:
import math

d=float(input("diametro da frigideira: "))
t=float(input("espessura da panqueca: "))
p=float(input("quantidade de panquecas: "))
M = D**2*T*math.pi*P/4

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = D**2*T*math.pi*P/4
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:53:05) 
-- CODE:
import math

d=float(input("diametro da frigideira: "))
t=float(input("espessura da panqueca: "))
p=float(input("quantidade de panquecas: "))
M = D**2*T*math.pi*P/4

-- EXECUTION TIME:
0.160877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 6, in <module>
    M = D**2*T*math.pi*P/4
NameError: name 'D' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
